[package]
name = "pebble"
version = "0.1.0"
authors = ["EtherD3v <github.com/EtherD3v>"]
edition = "2024"

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
